# nba-predictor

./: .claudeignore  .gitignore  .graphifyignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  airflow-values.yaml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  k8s-integration.yml
dags/: nba_orchestration.py
docs/: GITHUB_SETUP.md  PREREQUISITES.md  architecture_re.excalidraw  doc.md  flux_re.excalidraw  key_commands.md  pour_les_nuls.md
k8s/: airflow-postgres.yaml  backend-deployment.yaml  backend-service.yaml  backend-servicemonitor.yaml  calico-installation.yaml  frontend-deployment.yaml  frontend-service.yaml  kind-config.yaml  mlflow.yaml  namespace.yaml
k8s/base/: airflow-credentials-sealedsecret.yaml  alertmanager-webhook-demo.yaml  backend-deployment.yaml  backend-hpa.yaml  backend-pdb.yaml  backend-service.yaml  backend-servicemonitor.yaml  frontend-pdb.yaml  frontend-service.yaml  grafana-dashboard-nba.json  kustomization.yaml  namespace.yaml  nba-ingress.yaml  networkpolicies-airflow.yaml  networkpolicies-mlflow.yaml  networkpolicies-monitoring.yaml  networkpolicies-nba.yaml  prometheus-rules-nba.yaml
k8s/overlays/dev/: backend-nodeport.yaml  frontend-nodeport.yaml  image-pull-policy-never.yaml  kustomization.yaml
k8s/overlays/prod/: README.md
k8s/overlays/staging/: README.md
nba-api/: Dockerfile  README.md  app.py  functions.py  requirements.txt
nba-api/static/model/: classifier.pikl  scaler.pikl
nba-web/: Dockerfile  index.html  nginx.conf
nba-web/assets/css/: styles.css
nba-web/assets/js/: index.js  utils.js
scripts/: load-test.sh
tests/: conftest.py  test_api.py  test_predictor.py
training/: requirements.txt  train.py
